@@ -1,5 +1,8 @@
 Changes in stable release 2.4.9 (not released yet)
 
+* Fixed a problem with colormap transition when a transient window
+  died.
+
 -------------------------------------------------------------------
 
 Changes in stable release 2.4.8 (11-Jun-2002)
