@@ -1,3 +1,8 @@
+2002-06-18  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/events.c (CoerceEnterNotifyOnCurrentWindow):
+	fixed colourmap focus problem
+
 2002-06-12  Mikhael Goikhman  <migo@homemail.com>
 
 	* NEWS:
